# get

./: README.md  main.py  pyproject.toml  setup.py  test.py
dict_get.egg-info/: PKG-INFO  SOURCES.txt
